--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -1,1 +1,307 @@
-// del
+@import "function";
+
+
+
+
+@media (max-width: 1700px) {
+    body {
+        main {
+            &#main_page {
+                .ms {
+                    &.ms_02 {
+                        article {
+                            > div {
+                                gap: 80px;
+                                .swiper-container {
+                                    .swiper-wrapper {
+                                        gap: 20px;
+                                    }
+                                }
+                                .product_wrap {
+                                    figure.swiper-slide{
+                                        width: 275px;
+                                    }
+                                }
+                            }
+                            
+                        }
+
+                    }
+                }
+            }
+        } 
+    }
+}
+
+
+@media (max-width: 1470px) {
+    @mixin paddingLeft_10 { padding-left: 0; }
+
+    @mixin hidaFont_50 {font-size: 40px;}
+    @mixin hidaFont_16 {font-size: 24px;}
+
+    @mixin hidaFont_14 {
+        font-size: 14px;
+        line-height: 1.43;
+        letter-spacing: -0.28px;
+    }
+    
+    body {
+        main {
+            &#main_page {
+                .ms {
+    
+                    &.ms_02 {
+                        // margin: 120px auto;
+                        margin: 80px auto;
+                        padding: 0 0 0 4%;
+                        article {
+                            > div {
+                                flex-direction: column;
+                                gap: 60px;
+                                align-items: flex-start;
+                                .swiper-container {
+                                    .swiper-wrapper {
+                                        gap: 20px;
+                                    }
+                                }
+                                &.top {
+                                    // margin-bottom: 80px;
+                                    margin-bottom: 100px;
+                                    .product_wrap {order:2}
+                                    .text_wrap {order: 1;}
+                                    .swiper-container {
+                                        .swiper-wrapper {
+                                            justify-content: flex-start;
+                                            .swiper-slide {
+                                                &:last-child {
+                                                    &::before {
+                                                        @include transition(all .15s);
+                                                        content: '';
+                                                        position: absolute; right: 0; top: 0;
+                                                        width: 100%; height: 100%;
+                                                        background: linear-gradient(to left, #fff, rgba(204, 204, 204, 0))
+                                                    }
+                                                }
+                                                &:first-child {
+                                                    &::before {
+                                                        display: none;
+                                                    }
+                                                }
+                                            }
+                                        }
+    
+                                    }
+                                    
+                                    
+                                }
+                                &.bottom {
+                                    @include paddingLeft_10; 
+                                    .swiper-slide {
+                                        &:last-child {
+                                            &::before {
+                                            }
+                                        }
+                                        
+                                    }
+                                }
+                                .product_wrap {
+                                    max-width: 100%;
+                                    figure.swiper-slide{
+                                        width: auto;
+                                        figcaption {
+                                            margin-top: 20px;
+                                            @include hidaFont_16;
+                                        }
+                                    }
+                                }
+                                .text_wrap {
+                                    h2 {@include hidaFont_50;}
+                                    p {
+                                        @include hidaFont_16;
+                                        margin-top: 10px;
+                                    }
+                                }
+    
+                            }
+                            
+                        }
+    
+                    }
+    
+                    &.ms_03 {
+                        article {
+                            @include paddingLeft_10();
+                            padding: 0 4%;
+                            .box {
+                                display: flex; justify-content: unset; flex-direction: column; 
+                                border: 1px solid #f00;
+                                .text_wrap {
+                                    margin-top: 120px;
+                                    display: unset; align-items:unset;justify-content: unset;flex-direction: unset;
+                                    min-width: auto;
+                                    height: auto;
+                                    margin-top: 120px;
+                                    h2 {@include hidaFont_50;}
+                                    p {
+                                        @include hidaFont_16;
+                                        margin-top: 20px;
+                                    }
+                                }
+                                    
+                                .img_wrap {
+                                    border: 1px solid #f00;
+                                    height: 50;
+                                    max-width: 100%;
+
+                                    &.img_01 {
+                                        img {
+                                            position: absolute; left: 50%; top: 50%;
+                                            transform: translateX(-50%) translateY(-50%);
+                                            &:nth-child(1) {z-index: 1;}
+                                        }
+                                    }
+                                    &.img_02 {
+                                        img {
+                                            position: absolute; left: 50%; top: 50%;
+                                            transform: translateX(-50%) translateY(-50%);
+                                            // &:not(:first-child) {opacity: 0;}
+                                            // &:nth-child(1) {margin-top: 200px;}
+                                            // &:nth-child(2) {margin-top: 400px;}
+                                            &:nth-child(1) {
+                                                z-index: 2;
+                                            }
+                                            &:nth-child(3), &:nth-child(4) {
+                                                position: relative;
+                                                top: 100%;
+                                                left: unset; right: 0; transform: unset;
+                                            }
+                                            &:nth-child(3) {
+                                                margin-right: auto; margin-left: 0;
+                                            }
+                                            &:nth-child(4) {
+                                                margin-top: 150px;
+                                                margin-left: auto; margin-right: 0;
+                                            }
+                                        }
+                                    }
+                                    &.img_03 {
+                                        img {
+                                            position: absolute;
+                                            // &:not(:nth-child(3)) {top: 100%;}
+                                            &:nth-child(1) {left: unset; right: 0; bottom: -100vh;}
+                                            &:nth-child(2) {left: 0; bottom: -100vh;}
+                                            &:nth-child(3) {top: 50%; left: 50%; transform: translateX(-50%) translateY(-50%);}
+                                            &:nth-child(4) {bottom: -100vh; right: 0;}
+
+                                        }
+
+                                        // img {
+                                        //     &:nth-child(1) {margin-top: 200px;}
+                                        //     &:nth-child(2) {margin-top: 400px;}
+                                        //     &:nth-child(3) {margin-top: 150px;}
+                                        //     &:nth-child(4) {margin-top: 150px;}
+                                        // }
+                                    }
+                                }
+                            }
+                            
+                        }
+                    }
+    
+                    &.ms_04 {
+                        @include fixed-layout_1920;
+                        background-color: #fff;
+                        article {
+                            height: 100vh;
+                            padding: 205px 0 0 0;
+                            @include paddingLeft_10();
+                            display: flex; justify-content: space-between;
+                            .left { 
+                                display: flex; flex-direction: column;
+                                h2 {
+                                    @include hidaFont_50;
+                                }
+                                p {
+                                    @include hidaFont_50;
+                                    margin-top: 40px;
+                                    span {
+                                        margin-top: 10px;
+                                        display: block;
+                                        @include hidaFont_16; color: #666;
+                                    }
+                                }
+                                ul {
+                                    display: flex; flex-direction:  column; gap: 16px 0;
+                                    margin-top: 50px;
+                                    li {
+                                        a {
+                                            position: relative;
+                                            @include hidaFont_16; color: #999;
+                                            &::after, &::before {
+                                                content: '';
+                                                position: absolute;
+                                                @include transition(all .15s);
+                                            }
+                                            &::after {
+                                                content: '';
+                                                left: 0; bottom: 0;
+                                                width: 0; height: 1px; background-color: #000;
+                                            }
+                                            &::before {
+                                                content: '';
+                                                opacity: 0;
+                                                width: 8px; height: 8px;
+                                                left: calc(100% + 10px); top: 50%;
+                                                transform: translateY(-50%);
+                                                background: url('../images/common/ico_arrow_01.svg') no-repeat center/cover;
+                                            }
+                                            &.active, &:hover {
+                                                color: #000;
+                                                &::after {
+                                                    width: 100%;
+                                                }
+                                                &::before {
+                                                    opacity: 1;
+                                                }
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                            .right {
+                                max-width: 980px;
+                                > div {
+                                    position: relative;
+                                    display: none; flex-wrap: wrap; gap: 8px;
+                                    &.active {display: flex;}
+                                    &::after {
+                                        @include hidagradient_01;
+                                        content: '';
+                                        position: absolute;
+                                
+                                        height: 20%;
+                                    }
+                                    > a {
+                                        width: 189px; height: 189px;
+                                    }
+                                }
+                            }
+    
+                        }
+                    }
+                }
+                
+            }
+        } 
+    }
+}
+
+
+
+
+
+
+
+
+
