--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -20,7 +20,6 @@ body {
         &.ico_01 {width: 10px; height: 10px; background-color: $color-100; border-radius: 100%} 
         &.ico_02 {width: 5px; height: 5px; background-color: $color-100; border-radius: 100%} 
     }
-    .layout_padding {padding-left: 13%;}
     /*  btn_link  */
 
     .arrow_01 {
@@ -42,13 +41,10 @@ body {
 
 
 // ==================================== header, footer ====================================
-$header-height : 100px;
-
 body {
     #header{
         position: fixed; left: 0; top: 0; z-index: 9999;
         width: 100%;
-        display: none;
         #header_wrap {
             display: flex; align-items: center;
             padding: 0 3%;
@@ -166,6 +162,7 @@ body {
         }
     }
     #footer {
+        margin-top: 150px;
         background: #000;
         article {
             padding: 100px 0 130px;
@@ -307,11 +304,9 @@ body {
 
 body {
     // opacity: 0;
-    
     main {
         // INDEX MAIN
         &#main_page {
-         
             .ms {
                 position: relative;z-index: 3;
                 overflow: hidden;
@@ -354,26 +349,28 @@ body {
                             .point_xy {
                                 position: absolute; left: 0; top: 0;
                                 width: 100%; height: 100%;
-                                border: 1px solid #f00;
                                 > a {
                                     display: flex; align-items: center;
+                                    border-radius: 100%;
                                     position: absolute;
-                                    background-color: #000;
                                     overflow: hidden;
+                                    background-color: #000;
+                                    transform: translate(-50%, -50%);
                                     &:hover, &.active {
+                                        padding: 5px 20px;
                                         border-radius: 30px;
-                                        padding: 0 0 0 20px;
                                         span {
                                             &:nth-of-type(1) {
-                                                @include fullsize;
+                                                width: 100%;height: 100%;
                                                 opacity: 1;
                                             }
                                         }
                                     }
                                     span {
+                                        line-height: 1;
                                         display: inline-block;
                                         &:nth-of-type(1) {
-                                            width: 0; opacity: 0;
+                                            width: 0; height: 0; opacity: 0;
                                             color: #fff;
                                             font-size: 16px;
                                             font-weight: bold;
@@ -451,6 +448,7 @@ body {
                                 width: 100%;
                                 max-width: 1160px;
                                 figure.swiper-slide{
+                                    @include transition(width 1s);
                                     width: 400px;
                                     figcaption {
                                         margin-top: 15px;
@@ -459,8 +457,6 @@ body {
                                 }
                             }
                             .text_wrap {
-                                $tW: 400px;
-                                max-width: $tW; min-width: $tW;
                                 width: 100%;
                                 h2 {@include hidaFont_50;}
                                 p {@include hidaFont_16;}
@@ -584,7 +580,6 @@ body {
                                 li {
                                     a {
                                         position: relative;
-                                        display: inline-block;
                                         @include hidaFont_16; color: #999;
                                         &::after, &::before {
                                             content: '';
@@ -621,7 +616,8 @@ body {
                             max-width: 980px;
                             > div {
                                 position: relative;
-                                display: flex; flex-wrap: wrap; gap: 8px;
+                                display: none; flex-wrap: wrap; gap: 8px;
+                                &.active {display: flex;}
                                 &::after {
                                     @include hidagradient_01;
                                     content: '';
