--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -379,34 +379,67 @@
                                 }
                                 
                                 .img_wrap {
-                                    height: 100vh;
-                                    // border: 1px solid #00f;
                                     max-width: 100%;
+                                    // width: 100%;
                                     &.img_01 {
+                                        aspect-ratio: 16/9;
                                         img {
+                                            all: unset;
+                                            position: absolute; left: 50%; top: 120px;
+                                            transform: translateX(-50%);
+                                            height: 400px;
                                         }
                                     }
                                     &.img_02 {
+                                        aspect-ratio: 1/2;
                                         img {
-                                            &:nth-child(1) {
+                                            &:nth-child(1), &:nth-child(2), &:nth-child(3), &:nth-child(4) {
+                                                all: unset;
+                                                max-width: 100%;
+                                                position: absolute; left: 50%; top: 120px;
+                                                transform: translateX(-50%);
+                                                opacity: 0;
+                                                object-fit: contain;
                                             }
-                                            &:nth-child(3), &:nth-child(4) {
-                                        
+                                            &:nth-child(1) {
+                                                max-height: 350px;
+                                                opacity: 1;
+                                            }
+                                            &:nth-child(2) {
+                                                max-height: 350px;
                                             }
                                             &:nth-child(3) {
+                                                left: 0; transform: translateX(0);
+                                                width: 60%;   
                                             }
                                             &:nth-child(4) {
+                                                left:auto; right: 0; transform: translateX(0);
+                                                width: 60%;   
+                                                max-height: 400px;
                                             }
                                         }
                                     }
                                     &.img_03 {
+                                        aspect-ratio: 1/3;
                                         img {
                                             // &:not(:nth-child(3)) {top: 100%;}
-                                            &:nth-child(1) {left: unset; right: 0; bottom: -100vh;}
-                                            &:nth-child(2) {left: 0; bottom: -100vh;}
-                                            &:nth-child(3) {top: 50%; left: 50%; transform: translateX(-50%) translateY(-50%);}
-                                            &:nth-child(4) {bottom: -100vh; right: 0;}
-    
+                                            &:nth-child(1), &:nth-child(2), &:nth-child(3),&:nth-child(4) {
+                                                all: unset;
+                                                position: absolute;
+                                                height: 400px;
+                                            }
+                                            &:nth-child(1) {
+                                                right: 0; top: 50%;
+                                            }
+                                            &:nth-child(2) {
+                                                left: 0; top: 100%;
+                                            }
+                                            &:nth-child(3) {
+                                                top: 120px;
+                                            }
+                                            &:nth-child(4) {
+                                                right: 0; top: 100%;
+                                            }
                                         }
     
                                         // img {
