product Swiper upload
product Top swiper right to left upload .... 0-0

--- a/kor/css/_function.scss
+++ b/kor/css/_function.scss
@@ -375,8 +375,7 @@ body {
 
 strong {font-weight: bold;}
 em, i {font-style: normal;}
-
-
+input,button{border-radius: 0;}
 input:focus, textarea:focus {outline: 2px solid #0a4b90;}
 
 
