--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -156,24 +156,16 @@
                                 &.top {
                                     // margin-bottom: 80px;
                                     margin-bottom: 100px;
+                                    display: none;
+                                    &.mo_1470 {display:flex;}
                                     .product_wrap {order:2}
                                     .text_wrap {order: 1;}
                                     .swiper-container {
                                         .swiper-wrapper {
-                                            justify-content: flex-start;
                                             .swiper-slide {
                                                 &:last-child {
                                                     &::before {
-                                                        @include transition(all .15s);
-                                                        content: '';
-                                                        position: absolute; right: 0; top: 0;
-                                                        width: 100%; height: 100%;
                                                         background: linear-gradient(to left, #fff, rgba(204, 204, 204, 0))
-                                                    }
-                                                }
-                                                &:first-child {
-                                                    &::before {
-                                                        display: none;
                                                     }
                                                 }
                                             }
