--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -396,50 +396,7 @@ body {
                             display: flex; align-items: center;
                             gap: 180px;
                             .swiper-container {
-                                display: flex;
                                 .swiper-wrapper {
-                                    display: flex;
-                                    overflow: hidden;
-                                    gap: 40px;
-                                }
-                            }
-                            &.top {
-                                margin-bottom: 80px;
-                                .swiper-container {
-                                    margin: 0;
-                                    .swiper-wrapper {
-                                        justify-content: flex-end;
-                                        .swiper-slide {
-                                            &:first-child {
-                                                &::before {
-                                                    @include transition(all .15s);
-                                                    content: '';
-                                                    position: absolute; right: 0; top: 0;
-                                                    width: 100%; height: 100%;
-                                                    background: linear-gradient(to right, #fff, rgba(255, 255, 255, 0));
-                                                }
-                                            }
-                                        }
-                                    }
-
-                                }
-                                
-                                
-                            }
-                            &.bottom {
-                                @include paddingLeft_10;
-                                .swiper-slide {
-                                    &:last-child {
-                                        &::before {
-                                            @include transition(all .15s);
-                                            content: '';
-                                            position: absolute; right: 0; top: 0;
-                                            width: 100%; height: 100%;
-                                            background: linear-gradient(to left, #fff, rgba(204, 204, 204, 0))
-                                        }
-
-                                    }
-                                    
                                 }
                             }
                             .product_wrap {
@@ -452,8 +409,48 @@ body {
                                         margin-top: 15px;
                                         @include hidaFont_16;
                                     }
+                                    &:last-child {
+                                        &::before {
+                                            @include transition(all .15s);
+                                            content: '';
+                                            position: absolute; right: 0; top: 0;
+                                            width: 100%; height: 100%;
+                                            background: linear-gradient(to left, #fff, rgba(204, 204, 204, 0))
+                                        }
+                                    }
                                 }
                             }
+
+                            &.top {
+                                margin-bottom: 80px;
+                                &.mo_1470 {display: none;}
+                                .swiper-container {
+                                    margin: 0;
+                                    .swiper-wrapper {
+                                        .swiper-slide {
+                                            &:last-child {
+                                                &::before {
+                                                    background: linear-gradient(to right, #fff, rgba(204, 204, 204, 0))
+                                                }
+                                            }
+                                            figcaption {
+                                                text-align: left;
+                                            }
+                                        }
+                                    }
+
+                                }
+                                
+                                
+                            }
+                            &.bottom {
+                                @include paddingLeft_10;
+                                .swiper-slide {
+                              
+                                    
+                                }
+                            }
+                            
                             .text_wrap {
                                 width: 100%;
                                 h2 {@include hidaFont_50;}
