--- a/kor/css/media.scss
+++ b/kor/css/media.scss
@@ -332,6 +332,7 @@
 
 
 
+
 // ms_03
 @media (max-width: 1200px) {
     @mixin paddingLeft_10 { padding-left: 0; }
@@ -375,7 +376,7 @@
                                     max-width: 100%;
                                     // width: 100%;
                                     &.img_01 {
-                                        aspect-ratio: 16/9;
+                                        aspect-ratio: 1/3;
                                         img {
                                             all: unset;
                                             position: absolute; left: 50%; top: 120px;
@@ -407,7 +408,6 @@
                                             }
                                             &:nth-child(4) {
                                                 left:auto; right: 0; transform: translateX(0);
-                                                width: 60%;   
                                                 max-height: 400px;
                                             }
                                         }
@@ -455,12 +455,116 @@
     }
 }
 
+
+// header
+@media (max-width: 900px) {
+    body {
+        #header{
+            #header_wrap {
+                height: 60px;
+                justify-content: space-between;
+                #header_center {display: none;}
+                #header_right {display: none;}
+            
+                // header_ham
+                .header_ham {
+                    display: flex;
+                    position: relative; top: 0;
+                    width: 28px; height: 18px;
+                    cursor: pointer;
+                    &.active {
+                        span {
+                            &:nth-of-type(1) { top: calc(50% - 1px); transform: rotate(45deg); }
+                            &:nth-of-type(2) { opacity: 0; transform: translateX(100%); }
+                            &:nth-of-type(3) { bottom: 50%; transform: rotate(-45deg); }
+                        }
+                    }
+                    span {
+                        // 햄벅
+                        position: absolute; left: 0; width: 22px; border-bottom: 2px solid #000;
+                        @include transition(all .3s);
+                        &:nth-of-type(1) { top: 0; }
+                        &:nth-of-type(2) { top: calc(50% - 1px); }
+                        &:nth-of-type(3) { bottom: 0; }
+                    }
+                }
+    
+                // #header_full {
+                //     @include transition(all .3s);
+                //     visibility: hidden; opacity: 0;
+                //     position: fixed; right: -50%; top: 0;
+                //     width: 50%; height: 100vh;
+                //     overflow: auto;
+                //     background: #fff;
+                //     font-size: 28px;
+                //     // padding: 40px 40px 80px;
+                //     padding: 50px 0;
+                //     color: #222;
+                //     display: flex; flex-direction: column; gap: 20px;
+                //     &.active {right: 0; visibility: visible; opacity: 1;}
+                //     > li:not(.login) {
+                //         > a {
+                //             padding: 0 50px;
+                //             svg {@include transition(all .3s);};
+                //             &.active {
+                //                 svg {
+                //                     transform: rotate(180deg);
+                //                 }
+                //             }
+                //         }
+                //     }
+    
+                //     .depth_01 {
+                //         margin: 30px 0 0 0;
+                //         padding: 30px 50px;
+                //         color: #111;
+                //         font-size: 24px;
+                //         font-weight: 400;
+                //         background-color: #f4f4f4;
+                //         display: flex; flex-direction: column; gap: 15px;
+                //     }
+                //     .login {
+                //         margin-top: auto;
+                //         font-size: 18px;
+                //         text-align: center;
+                //         color: #111; font-weight: 400;
+                //         > a {
+                //             position: relative;
+                //             display: inline-block;
+                //             margin-right: 10px;
+                //             padding-right: 10px;
+                //             &::after {
+                //                 content: '';
+                //                 position: absolute; right: 0; top: 50%; transform: translateY(-50%);
+                //                 width: 1px; height: 10px;
+                //                 background-color: #ddd;
+                //             }
+                            
+                //             &:last-child {
+                //                 margin: 0; padding: 0;
+                //                 &::after {
+                //                     display: none;
+                //                 }
+                //             }
+                //         }
+                //     }
+    
+    
+                // }
+            }
+        }
+
+    }
+    
+    
+}
 // header, footer 
 @media (max-width: 767px) {
     @mixin hidaFont_16 {font-size: 24px;}
     @mixin hidaFont_14 {font-size: 20px;}
 
     body {
+        
 
         #footer {
             article {
