--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -89,7 +89,7 @@ body {
                     span {
                         &:nth-of-type(1) { top: calc(50% - 1px); transform: rotate(45deg); }
                         &:nth-of-type(2) { opacity: 0; transform: translateX(100%); }
-                        &:nth-of-type(3) { bottom: 50%; transform: rotate(-45deg); }
+                        &:nth-of-type(3) { bottom: calc(50% - 1px); transform: rotate(-45deg); }
                     }
                 }
                 span {
@@ -314,6 +314,9 @@ body {
                 position: relative;z-index: 3;
                 overflow: hidden;
                 &.ms_01.swiper-container {
+                    .mv_bg, .mv_bg_mo {@include fullsize}
+                    .mv_bg_mo {display: none}
+
                     .swiper-pagination {
                         margin-top: 50px;
                         display: flex; 
@@ -336,6 +339,7 @@ body {
                             display: flex; justify-content: center; flex-direction: column;
 
                             figcaption {
+                                position: absolute; left: 0; top: 50%; transform: translateY(-50%);
                                 @include paddingLeft_10;
                                 p {
                                     &.text_01 {
