--- a/kor/css/_function.scss
+++ b/kor/css/_function.scss
@@ -144,6 +144,7 @@ $color-200 : #ea5417;
 
 
 // FONT
+@mixin font-openSans {font-family: 'Open Sans';}
 @mixin font-M {font-family: 'Montserrat';}
 @mixin font-nm {font-family: 'Nanum Myeongjo';}
 @mixin font-R {font-family: 'Roboto';}
@@ -175,6 +176,20 @@ $color-200 : #ea5417;
   font-size: 14px;
   line-height: 1.43;
   letter-spacing: -0.28px;
+}
+
+@mixin hidaFont_subtit {
+  font-size: 30px;
+  font-weight: bold;
+  line-height: 1.5;
+  letter-spacing: -0.6px;
+}
+
+@mixin hidaFont_membertit {
+  font-size: 24px;
+  font-weight: bold;
+  line-height: 1.5;
+  letter-spacing: -0.48px;
 }
 
 
@@ -260,6 +275,7 @@ body {
   // a link hover effect
   a.a_link {@include transition(.15s);&:hover { color: $color-100 !important; }}
   .non_link {cursor: default;}
+  .full {width: 100%;}
   
   
   #arrow{
@@ -312,8 +328,10 @@ body {
 /* @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap'); */
 /* @import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap'); */
-@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); /* 프리스텐다드 */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); /* Poppins */
+// @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css'); /* 프리스텐다드 */
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); /* Poppins */
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap'); /* Open Sans */
+
 
 
 
@@ -375,8 +393,9 @@ body {
 
 strong {font-weight: bold;}
 em, i {font-style: normal;}
-input,button{border-radius: 0;}
-input:focus, textarea:focus {outline: 2px solid #0a4b90;}
+input,button{border-radius: 0; border: none;}
+input:focus, textarea:focus {outline:1px solid #fff;}
+.c_pointer {cursor: pointer;}
 
 
 ion-icon { width: 100%; height: 100%; }
