gsap js, style modify
gsap js
- end remove

style
.img_wrap background add

--- a/kor/css/_function.scss
+++ b/kor/css/_function.scss
@@ -200,7 +200,7 @@ $color-200 : #ea5417;
 
 @for $i from 1 to 100{
   .wid_#{$i}{
-      width: $i + %;
+      width: $i + '%';
   }
 }
 // ====================================JJ For====================================
