--- a/kor/css/style.scss
+++ b/kor/css/style.scss
@@ -504,6 +504,8 @@ body {
                                 display: flex; flex-direction: column; align-items: center;
                                 width: 100%;
                                 max-width: 960px;
+                                background-color: #e7e7e9;
+
 
                                 img {object-fit: contain;}
                                 &.img_01 {
